--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "axios": "^1.4.0",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.0",
+    "i18next": "^23.15.1",
+    "lucide-react": "^0.441.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
+    "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
-    "tailwindcss-rtl": "^0.9.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.5",
@@ -37,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-rtl": "^0.9.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
